avancee sur la section fonctionnement

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <section id="functioning">
             <h1>Fonctionnement</h1>
 
-            <div class="functioning--elt">Choisissez un restaurant</div>
+            <div class="functioning--elt"><div class="functioning--elt__number">1</div><div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un restaurant</div>
+            <div class="functioning--elt"><div class="functioning--elt__number">2</div><div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu</div>
+            <div class="functioning--elt functioning--elt--highlight"><div class="functioning--elt__number">3</div><div class="functioning--elt__icon functioning--elt--highlight__icon"><i class="fa-solid fa-store"></i></div>Dégustez au restaurant</div>
         </section>
 
 
