--- a/index.html
+++ b/index.html
@@ -5,59 +5,89 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/style.css">
- 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
-            rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 
-            <script src="https://kit.fontawesome.com/8056cf0d7c.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        rel="stylesheet">
 
-    </head>
+    <script src="https://kit.fontawesome.com/8056cf0d7c.js" crossorigin="anonymous"></script>
 
-    <body>
+</head>
 
-        <!--HEADER-->
-        <header>
-            <img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200">
-        </header>
+<body>
 
-        <div class="location">
-           <i class="fa-solid fa-location-dot"></i> Paris, Belleville
+    <!--HEADER-->
+    <header>
+        <img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200">
+    </header>
+
+    <div class="location">
+        <i class="fa-solid fa-location-dot"></i> Paris, Belleville
+    </div>
+
+    <!--SECTION 1 // EXPLORE-->
+
+    <section id="explore">
+        <h1> Réservez le menu qui vous convient</h1>
+        <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+
+        <input class="button" type="submit" value="Explorer nos restaurants">
+    </section>
+
+    <!--SECTION 2 // FUNCTIONING-->
+
+    <section id="functioning">
+        <h1>Fonctionnement</h1>
+
+        <div class="functioning--elt">
+            <div class="functioning--elt__number">1</div>
+            <div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un restaurant
         </div>
+        <div class="functioning--elt">
+            <div class="functioning--elt__number">2</div>
+            <div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu
+        </div>
+        <div class="functioning--elt functioning--elt--highlight">
+            <div class="functioning--elt__number">3</div>
+            <div class="functioning--elt__icon functioning--elt--highlight__icon"><i class="fa-solid fa-store"></i>
+            </div>Dégustez au restaurant
+        </div>
+    </section>
 
-        <!--SECTION 1 // EXPLORE-->
+    <!--SECTION 3 // RESTAURANTS-->
 
-        <section id="explore">
-            <h1> Réservez le menu qui vous convient</h1>
-            <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+    <section id="restaurants">
+        <h1>Restaurants</h1>
 
-            <input class="button" type="submit" value="Explorer nos restaurants">
-        </section>
+        <div class="restaurant--card">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="La palette du goût - Ménilmontant" class="restaurant--card__image">
+                
+            <div class="restaurant--card__body">
+                <div class="restaurant--card__text">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                </div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
-        <!--SECTION 2 // FUNCTIONING-->
-
-        <section id="functioning">
-            <h1>Fonctionnement</h1>
-
-            <div class="functioning--elt"><div class="functioning--elt__number">1</div><div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un restaurant</div>
-            <div class="functioning--elt"><div class="functioning--elt__number">2</div><div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu</div>
-            <div class="functioning--elt functioning--elt--highlight"><div class="functioning--elt__number">3</div><div class="functioning--elt__icon functioning--elt--highlight__icon"><i class="fa-solid fa-store"></i></div>Dégustez au restaurant</div>
-        </section>
 
 
 
+</body>
 
-    </body>
-
-    </html>
+</html>
