--- a/index.html
+++ b/index.html
@@ -71,21 +71,74 @@
         <h1>Restaurants</h1>
 
         <div class="restaurant--card">
+            <div class="restaurant--card__new">Nouveau</div>
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="La palette du goût - Ménilmontant" class="restaurant--card__image">
-                
+
             <div class="restaurant--card__body">
                 <div class="restaurant--card__text">
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                 </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+            </div>
+        </div>
+
+        <div class="restaurant--card">
+            <div class="restaurant--card__new">Nouveau</div>
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="La note enchantée - Charonne" class="restaurant--card__image">
+
+            <div class="restaurant--card__body">
+                <div class="restaurant--card__text">
+                    <h3>La note enchantée</h3>
+                    <p>Charonne</p>
                 </div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+            </div>
+        </div>
+
+        <div class="restaurant--card">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="À la française - Cité Rouge" class="restaurant--card__image">
+
+            <div class="restaurant--card__body">
+                <div class="restaurant--card__text">
+                    <h3>À la française</h3>
+                    <p>Cité Rouge</p>
+                </div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+            </div>
+        </div>
+
+        <div class="restaurant--card">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Le délice des sens - Folie-Méricourt" class="restaurant--card__image">
+
+            <div class="restaurant--card__body">
+                <div class="restaurant--card__text">
+                    <h3>Le délice des sens</h3>
+                    <p>Folie-Méricourt</p>
+                </div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
             </div>
         </div>
     </section>
 
+    <!--FOOTER-->
 
+    <footer>
+
+    <h2>ohmyfood</h2>
+
+    <ul>
+        <li> <i class="fas fa-utensils"> </i> Proposer un restaurant</li>
+        <li> <i class="fas fa-handshake"> </i>Devenir partenaire</li>
+        <li> Mentions légales</li>
+        <li>Contact</li>
+    </ul>
+
+</footer>
 
 
 </body>
