--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200">
     </header>
 
-    <div class="location">
-        <i class="fa-solid fa-location-dot"></i> Paris, Belleville
-    </div>
+    <form class="location">
+        <label for="location"><i class="fa-solid fa-location-dot"></i></label>
+        <input type="text" name="location" id="location" placeholder="Paris, Belleville" class="location--form">
+    </form>
 
     <!--SECTION 1 // EXPLORE-->
 
@@ -42,7 +43,7 @@
         <h1> Réservez le menu qui vous convient</h1>
         <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
 
-        <input class="button" type="submit" value="Explorer nos restaurants">
+        <form><input class="button" type="submit" value="Explorer nos restaurants"></form>
     </section>
 
     <!--SECTION 2 // FUNCTIONING-->
@@ -50,19 +51,19 @@
     <section id="functioning">
         <h1>Fonctionnement</h1>
 
-        <div class="functioning--elt">
+        <a href="#"><div class="functioning--elt">
             <div class="functioning--elt__number">1</div>
             <div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un restaurant
-        </div>
-        <div class="functioning--elt">
+        </div></a>
+        <a href="#"><div class="functioning--elt">
             <div class="functioning--elt__number">2</div>
             <div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu
-        </div>
-        <div class="functioning--elt functioning--elt--highlight">
+        </div></a>
+        <a href="#"><div class="functioning--elt functioning--elt--highlight">
             <div class="functioning--elt__number">3</div>
             <div class="functioning--elt__icon functioning--elt--highlight__icon"><i class="fa-solid fa-store"></i>
             </div>Dégustez au restaurant
-        </div>
+        </div></a>
     </section>
 
     <!--SECTION 3 // RESTAURANTS-->
@@ -70,6 +71,7 @@
     <section id="restaurants">
         <h1>Restaurants</h1>
 
+        <a href="LaPaletteDuGout.html">
         <div class="restaurant--card">
             <div class="restaurant--card__new">Nouveau</div>
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -81,10 +83,14 @@
                     <p>Ménilmontant</p>
                 </div>
                 <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant--card__like--activated"><i class="fa-solid fa-heart"></i></div>
             </div>
         </div>
+    </a>
 
-        <div class="restaurant--card">
+
+        <a href="LaNoteEnchantee.html">
+     <div class="restaurant--card">
             <div class="restaurant--card__new">Nouveau</div>
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="La note enchantée - Charonne" class="restaurant--card__image">
@@ -97,7 +103,9 @@
                 <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
             </div>
         </div>
+    </a>
 
+    <a href="ALaFrancaise.html">
         <div class="restaurant--card">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="À la française - Cité Rouge" class="restaurant--card__image">
@@ -110,8 +118,10 @@
                 <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
             </div>
         </div>
+    </a>
 
-        <div class="restaurant--card">
+
+<a href="LeDeliceDesSens.html">       <div class="restaurant--card">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Le délice des sens - Folie-Méricourt" class="restaurant--card__image">
 
@@ -123,6 +133,7 @@
                 <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
             </div>
         </div>
+    </a> 
     </section>
 
     <!--FOOTER-->
