--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 
 <head>
+    <title>OhMyFood</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
@@ -31,6 +32,8 @@
     <header>
         <img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200">
     </header>
+
+    <!--LOCATION-->
 
     <form class="location">
         <label for="location"><i class="fa-solid fa-location-dot"></i></label>
@@ -82,8 +85,7 @@
                     <h3>La palette du goût</h3>
                     <p>Ménilmontant</p>
                 </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
-                <div class="restaurant--card__like--activated"><i class="fa-solid fa-heart"></i></div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
             </div>
         </div>
     </a>
@@ -100,7 +102,8 @@
                     <h3>La note enchantée</h3>
                     <p>Charonne</p>
                 </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+
             </div>
         </div>
     </a>
@@ -115,7 +118,7 @@
                     <h3>À la française</h3>
                     <p>Cité Rouge</p>
                 </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
             </div>
         </div>
     </a>
@@ -130,7 +133,7 @@
                     <h3>Le délice des sens</h3>
                     <p>Folie-Méricourt</p>
                 </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i></div>
+                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
             </div>
         </div>
     </a> 
@@ -140,7 +143,7 @@
 
     <footer>
 
-    <h2>ohmyfood</h2>
+    <h4>ohmyfood</h4>
 
     <ul>
         <li> <i class="fas fa-utensils"> </i> Proposer un restaurant</li>
