--- a/index.html
+++ b/index.html
@@ -53,117 +53,130 @@
     </section>
 
     <!--SECTION 2 // FUNCTIONING-->
-<div class="cols">
-    <section id="functioning">
-        <h2>Fonctionnement</h2>
+    <div class="cols">
+        <section id="functioning">
+            <h2>Fonctionnement</h2>
 
-        <div class="display">
-        <a href="#"><div class="functioning--elt">
-            <div class="functioning--elt__number">1</div>
-            <div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un restaurant
-        </div></a>
-        <a href="#"><div class="functioning--elt">
-            <div class="functioning--elt__number">2</div>
-            <div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu
-        </div></a>
-        <a href="#"><div class="functioning--elt functioning--elt--highlight">
-            <div class="functioning--elt__number">3</div>
-            <div class="functioning--elt__icon functioning--elt--highlight__icon"><i class="fa-solid fa-store"></i>
-            </div>Dégustez au restaurant
-        </div></a>
+            <div class="display">
+                <a href="#">
+                    <div class="functioning--elt">
+                        <div class="functioning--elt__number">1</div>
+                        <div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un
+                        restaurant
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="functioning--elt">
+                        <div class="functioning--elt__number">2</div>
+                        <div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="functioning--elt functioning--elt--highlight">
+                        <div class="functioning--elt__number">3</div>
+                        <div class="functioning--elt__icon functioning--elt--highlight__icon"><i
+                                class="fa-solid fa-store"></i>
+                        </div>Dégustez au restaurant
+                    </div>
+                </a>
+            </div>
+        </section>
+
+        <!--SECTION 3 // RESTAURANTS-->
+
+        <section id="restaurants">
+            <h2>Restaurants</h2>
+
+            <div class="display">
+
+                <a href="LaPaletteDuGout.html">
+                    <div class="restaurant--card">
+                        <div class="restaurant--card__new">Nouveau</div>
+                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="La palette du goût - Ménilmontant" class="restaurant--card__image">
+
+                        <div class="restaurant--card__body">
+                            <div class="restaurant--card__text">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                        </div>
+                    </div>
+                </a>
+
+
+                <a href="LaNoteEnchantee.html">
+                    <div class="restaurant--card">
+                        <div class="restaurant--card__new">Nouveau</div>
+                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée - Charonne"
+                            class="restaurant--card__image">
+
+                        <div class="restaurant--card__body">
+                            <div class="restaurant--card__text">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                            </div>
+                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+
+                        </div>
+                    </div>
+                </a>
+
+                <a href="ALaFrancaise.html">
+                    <div class="restaurant--card">
+                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="À la française - Cité Rouge" class="restaurant--card__image">
+
+                        <div class="restaurant--card__body">
+                            <div class="restaurant--card__text">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                        </div>
+                    </div>
+                </a>
+
+
+                <a href="LeDeliceDesSens.html">
+                    <div class="restaurant--card">
+                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="Le délice des sens - Folie-Méricourt" class="restaurant--card__image">
+
+                        <div class="restaurant--card__body">
+                            <div class="restaurant--card__text">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+        </section>
+
     </div>
-    </section>
-
-    <!--SECTION 3 // RESTAURANTS-->
-
-    <section id="restaurants">
-       <h2>Restaurants</h2>
-
-       <div class="display">
-
-        <a href="LaPaletteDuGout.html">
-        <div class="restaurant--card">
-            <div class="restaurant--card__new">Nouveau</div>
-            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="La palette du goût - Ménilmontant" class="restaurant--card__image">
-
-            <div class="restaurant--card__body">
-                <div class="restaurant--card__text">
-                    <h3>La palette du goût</h3>
-                    <p>Ménilmontant</p>
-                </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
-            </div>
-        </div>
-    </a>
-
-
-        <a href="LaNoteEnchantee.html">
-     <div class="restaurant--card">
-            <div class="restaurant--card__new">Nouveau</div>
-            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="La note enchantée - Charonne" class="restaurant--card__image">
-
-            <div class="restaurant--card__body">
-                <div class="restaurant--card__text">
-                    <h3>La note enchantée</h3>
-                    <p>Charonne</p>
-                </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
-
-            </div>
-        </div>
-    </a>
-
-    <a href="ALaFrancaise.html">
-        <div class="restaurant--card">
-            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="À la française - Cité Rouge" class="restaurant--card__image">
-
-            <div class="restaurant--card__body">
-                <div class="restaurant--card__text">
-                    <h3>À la française</h3>
-                    <p>Cité Rouge</p>
-                </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
-            </div>
-        </div>
-    </a>
-
-
-<a href="LeDeliceDesSens.html">       <div class="restaurant--card">
-            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="Le délice des sens - Folie-Méricourt" class="restaurant--card__image">
-
-            <div class="restaurant--card__body">
-                <div class="restaurant--card__text">
-                    <h3>Le délice des sens</h3>
-                    <p>Folie-Méricourt</p>
-                </div>
-                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
-            </div>
-        </div>
-    </a> 
-
-</div>
-    </section>
-
-</div>
 
     <!--FOOTER-->
 
     <footer>
 
-    <h4>ohmyfood</h4>
+        <h4>ohmyfood</h4>
 
-    <ul>
-        <li> <i class="fas fa-utensils"> </i> Proposer un restaurant</li>
-        <li> <i class="fas fa-handshake"> </i>Devenir partenaire</li>
-        <li> Mentions légales</li>
-        <li>Contact</li>
-    </ul>
+        <ul>
+            <li> <i class="fas fa-utensils"> </i> Proposer un restaurant</li>
+            <li> <i class="fas fa-handshake"> </i>Devenir partenaire</li>
+            <li> Mentions légales</li>
+            <li>Contact</li>
+        </ul>
 
-</footer>
+    </footer>
 
 
 </body>
