debuts cards menu

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!--SECTION 1 // EXPLORE-->
 
-    <section id="explore">
+    <section class="explore">
         <h1> Réservez le menu qui vous convient</h1>
         <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
 
@@ -84,7 +84,7 @@
 
         <!--SECTION 3 // RESTAURANTS-->
 
-        <section id="restaurants">
+        <section class="restaurants">
             <h2>Restaurants</h2>
 
             <div class="display">
