--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -27,14 +27,34 @@
 <body>
 
     <header>
-       <nav> <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a><img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200"></nav>
+       <nav> <a href="index.html"><i class="fa-solid fa-arrow-left arrow-left"></i></a><img src="images/logo/ohmyfood.png" alt="logo OhMyFood" width="200"></nav>
     </header>
 
     <main>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" class="menu--image">
         <div class="menu">
             <h1>La palette du goût</h1>
+
+            <div class="entree">
+                <p class="entree--title">ENTRÉES</p>
+            <div class="greenline"></div>
+
+            <div class="card">
+                <div class="card--text">
+                <p class="card--title">Fricassée d'escargot</p>
+                <p class="card--details">Au piment d'espelette</p>
+            </div>
+                <p class="card--price">25€</p>
+                <div class="checked"><i class="fa-solid fa-circle-check"></i></div>
+            </div>
+
+
+
+
+
         </div>
+
+        
     </main>
 
 
