avancement page menu

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!--SECTION 2 // FUNCTIONING-->
     <div class="cols">
-        <section id="functioning">
+        <section class="functioning">
             <h2>Fonctionnement</h2>
 
             <div class="display">
