test push github

--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -49,114 +49,133 @@
                 <p class="course--title">ENTRÉES</p>
                 <div class="greenline"></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Fricassée d'escargot</p>
-                        <p class="card--details">Au piment d'espelette</p>
+                <div class="card1"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Fricassée d'escargot</p>
+                            <p class="card--details">Au piment d'espelette</p>
+                        </div>
+                        <div class="card--price">
+                            <p>25€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>25€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a>
+            </div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Foie gras de canard mi-cuit</p>
-                        <p class="card--details">Et ses copeaux de truffe noire</p>
+            <div class="card2"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Foie gras de canard mi-cuit</p>
+                            <p class="card--details">Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="card--price">
+                            <p>35€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>35€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Oeuf au plat</p>
-                        <p class="card--details">Assaisoné à la truffe sur lit de caviar</p>
+                <div class="card3"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Oeuf au plat</p>
+                            <p class="card--details">Assaisoné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="card--price">
+                            <p>20€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>20€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
                 <!--PLATS-->
                 <p class="course--title">PLATS</p>
                 <div class="greenline"></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Filet de boeuf aux herbes</p>
-                        <p class="card--details">Accompagné de sa ribambelle de légumes</p>
+                <div class="card4"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Filet de boeuf aux herbes</p>
+                            <p class="card--details">Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="card--price">
+                            <p>40€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>40€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Parmentier de queue de boeuf</p>
-                        <p class="card--details">À la truffe noire sur sa purée de panais</p>
+                <div class="card5"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Parmentier de queue de boeuf</p>
+                            <p class="card--details">À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="card--price">
+                            <p>35€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>35€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Filet de turbot</p>
-                        <p class="card--details">Aux agrumes</p>
+                <div class="card6"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Filet de turbot</p>
+                            <p class="card--details">Aux agrumes</p>
+                        </div>
+                        <div class="card--price">
+                            <p>44€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>44€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
 
                 <!--DESSERTS-->
                 <p class="course--title">DESSERTS</p>
                 <div class="greenline"></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Paris-Brest</p>
-                        <p class="card--details">Revisité</p>
+                <div class="card7"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Paris-Brest</p>
+                            <p class="card--details">Revisité</p>
+                        </div>
+                        <div class="card--price">
+                            <p>18€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>18€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Macaron au chocolat d'exception</p>
-                        <p class="card--details">Et glace à la vanille de Madagascar</p>
+                <div class="card8"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Macaron au chocolat d'exception</p>
+                            <p class="card--details">Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="card--price">
+                            <p>22€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>22€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
+                </a></div>
 
-                <a href="#"><div class="card">
-                    <div class="card--text">
-                        <p class="card--title">Mousse au chocolat</p>
-                        <p class="card--details">Au piment d'espelette et à la truffe noire</p>
+                <div class="card9"><a href="#">
+                    <div class="card">
+                        <div class="card--text">
+                            <p class="card--title">Mousse au chocolat</p>
+                            <p class="card--details">Au piment d'espelette et à la truffe noire</p>
+                        </div>
+                        <div class="card--price">
+                            <p>23€</p>
+                        </div>
+                        <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
-                    <div class="card--price">
-                        <p>23€</p>
-                    </div>
-                    <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
-                </div></a>
-
+                </a></div>
+                <!--BUTTON-->
 
                 <form><input class="button commandbutton" type="submit" value="Commander"></form>
 
@@ -169,16 +188,16 @@
 
     </main>
 
-
+    <!--FOOTER-->
     <footer>
 
         <h4>ohmyfood</h4>
 
         <ul>
-            <li> <i class="fas fa-utensils"> </i> Proposer un restaurant</li>
-            <li> <i class="fas fa-handshake"> </i>Devenir partenaire</li>
-            <li> Mentions légales</li>
-            <li>Contact</li>
+            <li> <a href="#"><i class="fas fa-utensils"> </i> Proposer un restaurant</li></a>
+            <li> <a href="#"><i class="fas fa-handshake"> </i>Devenir partenaire</li></a>
+            <li> <a href="#">Mentions légales</li></a>
+            <li> <a href="#">Contact</li></a>
         </ul>
 
     </footer>
