--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
     <!--SECTION 1 // EXPLORE-->
 
+<main>
+
     <section class="explore">
         <h1> Réservez le menu qui vous convient</h1>
         <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
@@ -163,6 +165,8 @@
 
     </div>
 
+</main>
+
     <!--FOOTER-->
 
     <footer>
@@ -170,10 +174,10 @@
         <h4>ohmyfood</h4>
 
         <ul>
-            <li> <i class="fas fa-utensils"> </i> Proposer un restaurant</li>
-            <li> <i class="fas fa-handshake"> </i>Devenir partenaire</li>
-            <li> Mentions légales</li>
-            <li>Contact</li>
+            <li> <a href="#"><i class="fas fa-utensils"> </i> Proposer un restaurant</li></a>
+            <li> <a href="#"><i class="fas fa-handshake"> </i>Devenir partenaire</li></a>
+            <li> <a href="#">Mentions légales</li></a>
+            <li> <a href="#">Contact</li></a>
         </ul>
 
     </footer>
