--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <main>
 
     <section class="explore">
-        <h1> Réservez le menu qui vous convient</h1>
+        <h1> Réservez le menu qui vus convient</h1>
         <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
 
         <form><input class="button" type="submit" value="Explorer nos restaurants"></form>
