ajout autres menus  + reglages bugs

--- a/LaPaletteDuGout.html
+++ b/LaPaletteDuGout.html
@@ -56,7 +56,7 @@
                             <p class="card--details">Au piment d'espelette</p>
                         </div>
                         <div class="card--price">
-                            <p>25€</p>
+                            25€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -70,7 +70,7 @@
                             <p class="card--details">Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="card--price">
-                            <p>35€</p>
+                            35€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -83,7 +83,7 @@
                             <p class="card--details">Assaisoné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="card--price">
-                            <p>20€</p>
+                            20€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -100,7 +100,7 @@
                             <p class="card--details">Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="card--price">
-                            <p>40€</p>
+                            40€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -113,7 +113,7 @@
                             <p class="card--details">À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="card--price">
-                            <p>35€</p>
+                            35€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -126,7 +126,7 @@
                             <p class="card--details">Aux agrumes</p>
                         </div>
                         <div class="card--price">
-                            <p>44€</p>
+                            44€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -144,7 +144,7 @@
                             <p class="card--details">Revisité</p>
                         </div>
                         <div class="card--price">
-                            <p>18€</p>
+                            18€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -157,7 +157,7 @@
                             <p class="card--details">Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="card--price">
-                            <p>22€</p>
+                            22€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -170,7 +170,7 @@
                             <p class="card--details">Au piment d'espelette et à la truffe noire</p>
                         </div>
                         <div class="card--price">
-                            <p>23€</p>
+                            23€
                         </div>
                         <div class="checked-background"><i class="checked fa-solid fa-circle-check"></i></div>
                     </div>
@@ -194,13 +194,14 @@
         <h4>ohmyfood</h4>
 
         <ul>
-            <li> <a href="#"><i class="fas fa-utensils"> </i> Proposer un restaurant</li></a>
-            <li> <a href="#"><i class="fas fa-handshake"> </i>Devenir partenaire</li></a>
+            <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</li></a>
+            <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</li></a>
             <li> <a href="#">Mentions légales</li></a>
             <li> <a href="#">Contact</li></a>
         </ul>
 
     </footer>
+
 
 
 </body>
