--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <main>
 
     <section class="explore">
-        <h1> Réservez le menu qui vus convient</h1>
+        <h1> Réservez le menu qui vous convient</h1>
         <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
 
         <form><input class="button" type="submit" value="Explorer nos restaurants"></form>
@@ -174,8 +174,8 @@
         <h4>ohmyfood</h4>
 
         <ul>
-            <li> <a href="#"><i class="fas fa-utensils"> </i> Proposer un restaurant</li></a>
-            <li> <a href="#"><i class="fas fa-handshake"> </i>Devenir partenaire</li></a>
+            <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</li></a>
+            <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</li></a>
             <li> <a href="#">Mentions légales</li></a>
             <li> <a href="#">Contact</li></a>
         </ul>
