--- a/index.html
+++ b/index.html
@@ -45,140 +45,146 @@
 
     <!--SECTION 1 // EXPLORE-->
 
-<main>
+    <main>
 
-    <section class="explore">
-        <h1> Réservez le menu qui vous convient</h1>
-        <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+        <section class="explore">
+            <h1> Réservez le menu qui vous convient</h1>
+            <p> Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
 
-        <form><input class="button" type="submit" value="Explorer nos restaurants"></form>
-    </section>
-
-    <!--SECTION 2 // FUNCTIONING-->
-    <div class="cols">
-        <section class="functioning">
-            <h2>Fonctionnement</h2>
-
-            <div class="display">
-                <a href="#">
-                    <div class="functioning--elt">
-                        <div class="functioning--elt__number">1</div>
-                        <div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>Choisissez un
-                        restaurant
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="functioning--elt">
-                        <div class="functioning--elt__number">2</div>
-                        <div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre menu
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="functioning--elt functioning--elt--highlight">
-                        <div class="functioning--elt__number">3</div>
-                        <div class="functioning--elt__icon functioning--elt--highlight__icon"><i
-                                class="fa-solid fa-store"></i>
-                        </div>Dégustez au restaurant
-                    </div>
-                </a>
-            </div>
+            <form><input class="button" type="submit" value="Explorer nos restaurants"></form>
         </section>
 
-        <!--SECTION 3 // RESTAURANTS-->
+        <!--SECTION 2 // FUNCTIONING-->
+        <div class="cols centre">
+            <section class="functioning">
+                <h2>Fonctionnement</h2>
 
-        <section class="restaurants">
-            <h2>Restaurants</h2>
-
-            <div class="display">
-
-                <a href="LaPaletteDuGout.html">
-                    <div class="restaurant--card">
-                        <div class="restaurant--card__new">Nouveau</div>
-                        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt="La palette du goût - Ménilmontant" class="restaurant--card__image">
-
-                        <div class="restaurant--card__body">
-                            <div class="restaurant--card__text">
-                                <h3>La palette du goût</h3>
-                                <p>Ménilmontant</p>
-                            </div>
-                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
-                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                <div class="display">
+                    <a href="#">
+                        <div class="functioning--elt">
+                            <div class="functioning--elt__number">1</div>
+                            <div class="functioning--elt__icon"><i class="fa-solid fa-mobile-screen"></i></div>
+                            Choisissez un
+                            restaurant
                         </div>
-                    </div>
-                </a>
-
-
-                <a href="LaNoteEnchantee.html">
-                    <div class="restaurant--card">
-                        <div class="restaurant--card__new">Nouveau</div>
-                        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée - Charonne"
-                            class="restaurant--card__image">
-
-                        <div class="restaurant--card__body">
-                            <div class="restaurant--card__text">
-                                <h3>La note enchantée</h3>
-                                <p>Charonne</p>
-                            </div>
-                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
-                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
-
+                    </a>
+                    <a href="#">
+                        <div class="functioning--elt">
+                            <div class="functioning--elt__number">2</div>
+                            <div class="functioning--elt__icon"><i class="fa-solid  fa-list"></i></div>Composez votre
+                            menu
                         </div>
-                    </div>
-                </a>
-
-                <a href="ALaFrancaise.html">
-                    <div class="restaurant--card">
-                        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt="À la française - Cité Rouge" class="restaurant--card__image">
-
-                        <div class="restaurant--card__body">
-                            <div class="restaurant--card__text">
-                                <h3>À la française</h3>
-                                <p>Cité Rouge</p>
-                            </div>
-                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
-                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                    </a>
+                    <a href="#">
+                        <div class="functioning--elt functioning--elt--highlight">
+                            <div class="functioning--elt__number">3</div>
+                            <div class="functioning--elt__icon functioning--elt--highlight__icon"><i
+                                    class="fa-solid fa-store"></i>
+                            </div>Dégustez au restaurant
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
+            </section>
 
+            <!--SECTION 3 // RESTAURANTS-->
 
-                <a href="LeDeliceDesSens.html">
-                    <div class="restaurant--card">
-                        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="Le délice des sens - Folie-Méricourt" class="restaurant--card__image">
+            <section class="restaurants">
+                <h2>Restaurants</h2>
 
-                        <div class="restaurant--card__body">
-                            <div class="restaurant--card__text">
-                                <h3>Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
+                <div class="display">
+
+                    <a href="LaPaletteDuGout.html">
+                        <div class="restaurant--card">
+                            <div class="restaurant--card__new">Nouveau</div>
+                            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                alt="La palette du goût - Ménilmontant" class="restaurant--card__image">
+
+                            <div class="restaurant--card__body">
+                                <div class="restaurant--card__text">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                        class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                             </div>
-                            <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
-                                    class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
                         </div>
-                    </div>
-                </a>
+                    </a>
 
-            </div>
-        </section>
 
-    </div>
+                    <a href="LaNoteEnchantee.html">
+                        <div class="restaurant--card">
+                            <div class="restaurant--card__new">Nouveau</div>
+                            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                alt="La note enchantée - Charonne" class="restaurant--card__image">
 
-</main>
+                            <div class="restaurant--card__body">
+                                <div class="restaurant--card__text">
+                                    <h3>La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                        class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="ALaFrancaise.html">
+                        <div class="restaurant--card">
+                            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                alt="À la française - Cité Rouge" class="restaurant--card__image">
+
+                            <div class="restaurant--card__body">
+                                <div class="restaurant--card__text">
+                                    <h3>À la française</h3>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                        class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                            </div>
+                        </div>
+                    </a>
+
+
+                    <a href="LeDeliceDesSens.html">
+                        <div class="restaurant--card">
+                            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="Le délice des sens - Folie-Méricourt" class="restaurant--card__image">
+
+                            <div class="restaurant--card__body">
+                                <div class="restaurant--card__text">
+                                    <h3>Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="restaurant--card__like"><i class="fa-regular fa-heart"></i> <i
+                                        class="fa-solid fa-heart restaurant--card__like--activated"></i></div>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+            </section>
+
+        </div>
+
+    </main>
 
     <!--FOOTER-->
 
     <footer>
 
-        <h4>ohmyfood</h4>
+        <div class="footercontainer centre">
 
-        <ul>
-            <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</li></a>
-            <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</li></a>
-            <li> <a href="#">Mentions légales</li></a>
-            <li> <a href="#">Contact</li></a>
-        </ul>
+            <h4>ohmyfood</h4>
+
+            <ul>
+                <li> <a href="#"><i class="fas fa-utensils icon"> </i>Proposer un restaurant</li></a>
+                <li> <a href="#"><i class="fas fa-handshake icon"> </i>Devenir partenaire</li></a>
+                <li> <a href="#">Mentions légales</li></a>
+                <li> <a href="#">Contact</li></a>
+            </ul>
+
+        </div>
 
     </footer>
 
